tests/purs/passing/StringEdgeCases.purs
module Main where

import Prelude
import Records as Records
import Symbols as Symbols

main = do
  Records.main
  Symbols.main
